--- a/misc/install.template
+++ b/misc/install.template
@@ -2,6 +2,7 @@ RELEASE='%RELEASE%'
 IS_EXIT=%EXIT%
 INSTALL_ARM=%ARM%
 CHECK_IPV6=%CHECKIPV6%
+ENABLE_AUTO_UPDATE=%ENABLE_AUTO_UPDATE%
 
 echo -e "\e[36m" #cyan
 cat << "EOF"
@@ -80,6 +81,14 @@ then
     sudo sed -i "s/INSERT_IPV6_ADDRESS/$IPV6_ADDRESS/" /etc/tor/torrc
     echo -e "\e[32mIPv6 Support enabled ($IPV6_ADDRESS)\e[39m"
   fi
+fi
+
+if $ENABLE_AUTO_UPDATE
+then
+  echo "Enabling unattended upgrades..."
+  sudo apt-get -y unattended-upgrades apt-listchanges
+  DISTRO=$(lsb_release -is)
+  sudo wget -q -O /etc/apt/apt.conf.d/50unattended-upgrades "https://raw.githubusercontent.com/flxn/tor-relay-configurator/master/misc/50unattended-upgrades.$DISTRO"
 fi
 
 sleep 10
