--- a/misc/install.template
+++ b/misc/install.template
@@ -36,7 +36,7 @@ echo "deb-src https://deb.torproject.org/torproject.org $RELEASE main" | sudo te
 
 echo "Adding Torproject GPG key..."
 curl https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc | gpg --import > /dev/null
-gpg --export A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89 | apt-key add - > /dev/null
+gpg --export A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89 | sudo apt-key add - > /dev/null
 
 echo "Updating package list..."
 sudo apt-get -y update > /dev/null
